fixed horizontal scroll on mobile screens

--- a/index.css
+++ b/index.css
@@ -54,8 +54,6 @@ body {
   font-size: 18px;
   font-weight: 500;
   line-height: 22px;
-  letter-spacing: 0em;
-  text-align: left;
 }
 
 .location {
